# dwell-protocol

./: .gitignore  .gitmodules  AGENTS.md  DEVNET.md  FORGERY-SURFACE.md  HANDOFF.md  LAUNCH-THREAD.md  LAUNCH.md  LICENSE  Makefile  README.md  SECURITY-REVIEW.md  admin.css  admin.html  admin.js  advertisers.html  chatgpt.html  developers.html  founders.html  gemini.html  index.html  landers.css  marketers.html  portal.css  privacy.html  products.html  redeem.html  redeem.js  researchers.html  script.js  students.html  styles.css  terminal.html  theme.css  writers.html
aiad/: README.md
chrome-extension/: GEMINI_BUG_HANDOFF.md  README.md  STORE_SUBMISSION.md  manifest.json  package-lock.json  package.json
desktop/: README.md
docs/: 01-tokenomics.md  07-starfun-launch.md
dwell/: .gitignore  AGENTS.md  DEVNET.md  FORGERY-SURFACE.md  Makefile  README.md  ROADMAP.md
dwell/contracts-solana/programs/dwell-funder/: Cargo.toml
dwell/contracts-solana/programs/dwell-funder/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
dwell/contracts-solana/programs/merkle-distributor/: Cargo.toml
dwell/contracts-solana/programs/merkle-distributor/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
extension/: extension.js  package.json
robinhood/: LAUNCH-PLAN.md  POINTS.md  README.md  TOKENOMICS.md
server/: .env.example  README.md  package.json
store-assets/: README.md
terminal/: package.json
tools/: gen-icons.py  gen-landers.mjs  gen-og.mjs  gen-store-assets.mjs  package-extension.sh
vscode-extension/: INTEGRATION.md  LICENSE  (+2 more)
(+333 files in other folders)
