[package]
name = "dwell-funder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = { version = "=1.18.26", default-features = false }
spl-token = { version = "=4.0.3", features = ["no-entrypoint"] }
borsh = "=1.5.1"
mock-jupiter-swap = { path = "../mock-jupiter-swap", default-features = false }

[profile.release]
overflow-checks = true
