[package]
name = "merkle-distributor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["entrypoint"]
entrypoint = []

[dependencies]
solana-program = { version = "=1.18.26", default-features = false }
borsh = "=1.5.1"

[profile.release]
overflow-checks = true
